cabal-version:      2.4
name:               pl-sandbox
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A workspace for PL experiments

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Greg Anderson
maintainer:         ganderso@cs.utexas.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pl-sandbox
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Lexer,
    Parser,
    Source,
    Type,
    Typecheck,
    Core,
    Desugar

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base ^>=4.16.0.0,
    bytestring,
    array,
    containers,
    mtl

  build-tool-depends:
    alex:alex,
    happy:happy

  hs-source-dirs:   app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  default-language: Haskell2010
